增加页面刷新也重新定位侧边栏

--- a/user.html
+++ b/user.html
@@ -25,27 +25,27 @@
 			<div class="nav nav-list" >
 				<ul class="nav nav-pills" id="menu">
 					<li class="active">
-						<a href="#content" id="sy" data-addtab="menu" data-toggle="tab" data-url="user/main">
+						<a href="#content" id="sy" data-addtab="menu" data-toggle="tab" data-url="user/main" title="首页">
 							<span class="glyphicon glyphicon-home btx"></span>首页
 						</a>
 					</li>
 					<li>
-						<a href="#content1" id="yhgl" data-addtab="menu1" data-toggle="tab" data-url="user/main">
+						<a href="#content1" id="yhgl" data-addtab="menu1" data-toggle="tab" data-url="user/main" title="用户管理">
 							<span class="glyphicon glyphicon-user btx"></span>用户管理
 						</a>
 					</li>
 					<li>
-						<a href="#content2"  id="wddd" data-addtab="menu2" data-toggle="tab" data-url="user/main">
+						<a href="#content2"  id="wddd" data-addtab="menu2" data-toggle="tab" data-url="user/main" title="我的订单">
 							<span class="glyphicon glyphicon-shopping-cart btx"></span>我的订单
 						</a>
 					</li>
 					<li>
-						<a href="#content3" id="mmxg" data-addtab="menu3" data-toggle="tab" data-url="user/main">
+						<a href="#content3" id="mmxg" data-addtab="menu3" data-toggle="tab" data-url="user/main" title="支付相关">
 							<span class="glyphicon glyphicon-jpy btx"></span>支付相关
 						</a>
 					</li>
 					<li>
-						<a href="#content4" id="xtsz" data-addtab="menu4" data-toggle="tab" data-url="user/main">
+						<a href="#content4" id="xtsz" data-addtab="menu4" data-toggle="tab" data-url="user/main" title="系统设置">
 							<span class="glyphicon glyphicon-cog btx"></span>系统设置
 						</a>
 					</li>
